--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         mouseControls: true,
         touchControls: true,
         gyroControls: true,
-        minHeight: window.innerHeight,
+        minHeight: 2000,
         minWidth: window.innerWidth,
         scale: 1.0,
         scaleMobile: 0.5,
