--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         mouseControls: true,
         touchControls: true,
         gyroControls: true,
-        minHeight: 2000,
+        minHeight: window.innerHeight,
         minWidth: window.innerWidth,
         scale: 1.0,
         scaleMobile: 0.5,
